--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,10 +44,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.location_tracker_app"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        applicationId "com.santanub.location_tracker_app"
         minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -55,11 +52,22 @@ android {
         multiDexEnabled true
     }
 
+    signingConfigs {
+        release {
+            if (System.getenv()["ANDROID_KEYSTORE_PATH"]) {
+                storeFile file(System.getenv()["ANDROID_KEYSTORE_PATH"])
+                storePassword System.getenv()["ANDROID_KEYSTORE_PASSWORD"]
+                keyAlias System.getenv()["ANDROID_KEY_ALIAS"]
+                keyPassword System.getenv()["ANDROID_KEY_PASSWORD"]
+            }
+        }
+    }
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -70,6 +78,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'androidx.multidex:multidex:2.0.1'
 }
