--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    namespace "com.example.location_tracker_app"
+    namespace "com.santanub.location_tracker_app"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -52,7 +52,7 @@ android {
         multiDexEnabled true
     }
 
-    signingConfigs {
+    /*signingConfigs {
         release {
             if (System.getenv()["ANDROID_KEYSTORE_PATH"]) {
                 storeFile file(System.getenv()["ANDROID_KEYSTORE_PATH"])
@@ -61,12 +61,18 @@ android {
                 keyPassword System.getenv()["ANDROID_KEY_PASSWORD"]
             }
         }
-    }
+    }*/
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            shrinkResources false
+        }
         release {
-            signingConfig signingConfigs.release
-            minifyEnabled true
+            // Commenting out signingConfig for now since we're not using it
+            // signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
