--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.0
   package_info_plus: ^4.1.0
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
 
 # The following adds the Cupertino Icons font to your application.
 # Use with the CupertinoIcons class for iOS style icons.
