--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,10 +48,14 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open to track your movement and calculate distance traveled.</string>
+	<string>This app needs access to location when open to track your movements.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app needs access to location when in the background to continue tracking your movement and calculate distance traveled.</string>
+	<string>This app needs access to location when in background to continue tracking your movements.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app needs access to location when in the background to continue tracking your movement and calculate distance traveled.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 </dict>
 </plist>
