--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.0+5
 
 environment:
   sdk: '>=3.0.5 <3.1.0'
@@ -39,6 +39,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.0
   package_info_plus: ^4.1.0
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
 
 # The following adds the Cupertino Icons font to your application.
 # Use with the CupertinoIcons class for iOS style icons.
