--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   package_info_plus: ^4.1.0
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
+  flutter_background_service: ^2.4.6
+  flutter_background_service_android: ^3.0.3
 
 # The following adds the Cupertino Icons font to your application.
 # Use with the CupertinoIcons class for iOS style icons.
